recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:8: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
	spiral(steps-1,90,3+increment)
              ^